tests/modified_lib/modified_lib.exp
first status, after recheck
Error -------------------------------------------------------------- test.js:5:5

Cannot call `bar` with `5` bound to `str` because number is incompatible with
string.

Error: test.js:5
  5: bar(5);
         ^ Cannot call `bar` with `5` bound to `str` because number [1] is incompatible with string [2].
  References:
    5: bar(5);
           ^ [1]: number
    2:   declare function bar(str: string): number;
                                   ^^^^^^ [2]: string. See lib: lib/lib.js:2


Found 1 error
second status, after touch
Error -------------------------------------------------------------- test.js:5:5

Cannot call `bar` with `5` bound to `str` because number is incompatible with
string.

Error: test.js:5
  5: bar(5);
         ^ Cannot call `bar` with `5` bound to `str` because number [1] is incompatible with string [2].
  References:
    5: bar(5);
           ^ [1]: number
    2:   declare function bar(str: string): number;
                                   ^^^^^^ [2]: string. See lib: lib/lib.js:2


Found 1 error
third status, after modification
Error -------------------------------------------------------------- test.js:5:5

Cannot call `bar` with `5` bound to `str` because number is incompatible with
string.

Error: test.js:5
  5: bar(5);
         ^ Cannot call `bar` with `5` bound to `str` because number [1] is incompatible with string [2].
  References:
    5: bar(5);
           ^ [1]: number
    2:   declare function bar(str: string): number;
                                   ^^^^^^ [2]: string. See lib: lib/lib.js:2


Found 1 error
fourth status, after modification
done
